[package]
name = "rupl"
version = "0.1.2"
edition = "2024"
license = "GPL-3.0-only"
description = "a complex graphing library"
authors = ["bgkillas <mswalhelm@gmail.com>"]
documentation = "https://docs.rs/rupl"
repository = "https://github.com/bgkillas/rupl"
homepage = "https://github.com/bgkillas/rupl"

[features]
default = ["skia-vulkan", "x11", "wayland", "winit", "rayon", "serde", "arboard"]
egui = ["dep:egui"]
skia = ["dep:skia-safe"]
tiny-skia = ["dep:tiny-skia", "dep:bytemuck"]
tiny-skia-text = ["dep:bdf2", "dep:tiny-skia"]
tiny-skia-png = ["tiny-skia/png-format", "dep:tiny-skia"]
winit = ["dep:winit"]
rayon = ["dep:rayon"]
serde = ["dep:serde", "dep:bitcode", "dep:base64", "dep:zstd"]
arboard = ["dep:arboard"]
skia-vulkan = ["skia-safe/vulkan", "skia", "dep:ash", "dep:vulkano"]
vulkano-x11 = ["vulkano/x11"]
x11 = ["winit/x11", "softbuffer/x11"]
wayland = ["winit/wayland", "softbuffer/wayland"]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]
wasm-draw = ["wasm"]

[dependencies]
bytemuck = { version = "1.24.0", optional = true }
rayon = { version = "1.11.0", optional = true }
winit = { version = "0.30.12", default-features = false, features = ["rwh_06"], optional = true }
egui = { version = "0.33.3", default-features = false, optional = true }
skia-safe = { version = "0.91.1", optional = true }
tiny-skia = { version = "0.11.4", default-features = false, features = ["simd", "std"], optional = true }
bdf2 = { version = "0.7.1", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
arboard = { version = "3.6.1", features = ["wayland-data-control"], optional = true }
bitcode = { version = "0.6.9", features = ["serde"], optional = true }
base64 = { version = "0.22.1", optional = true }
zstd = { version = "0.13.3", optional = true }
ash = { version = "0.38.0", optional = true }
vulkano = { version = "0.35.2", default-features = false, optional = true }
wasm-bindgen = { version = "0.2.108", optional = true }
js-sys = { version = "0.3.85", optional = true }

[dev-dependencies]
softbuffer = { version = "0.4.8", default-features = false, features = ["x11", "wayland"] }

[package.metadata.docs.rs]
features = ["egui", "rayon", "serde"]
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"
